--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
-# Godot 4+ specific ignores
+# Godot-specific folders
+.import/
 .godot/
+export.cfg
+export_presets.cfg
+
+# OS-specific junk
+.DS_Store
+Thumbs.db
+
+# Android/iOS build folders
 /android/
+ios/
+
+# Mono (if using C#)
+.mono/
+
+# Godot temporary files
+*.tmp
+*.log
